--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "exact": "^1.0.1",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
     "@types/react": "18.3.3",
