--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@ant-design/icons": "5.3.7",
     "antd": "5.18.1",
+    "axios": "1.7.2",
     "exact": "^1.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
